@@ -12,8 +12,10 @@ class FunctionCache(Storage):
     ONE_WEEK = 7 * ONE_DAY
     ONE_MONTH = 4 * ONE_WEEK
 
-    def __init__(self, filename, max_file_size_kb=-1):
-        Storage.__init__(self, filename, max_file_size_kb=max_file_size_kb)
+    def __init__(self, filename, max_file_size_mb=5):
+        max_file_size_kb = max_file_size_mb * 1024
+        max_item_count = max_file_size_mb * 250
+        Storage.__init__(self, filename, max_item_count=max_item_count, max_file_size_kb=max_file_size_kb)
 
         self._enabled = True
 
@@ -102,3 +104,18 @@ class FunctionCache(Storage):
             self._set(cache_id, cached_data)
 
         return cached_data
+
+    def _optimize_item_count(self):
+        clear = False
+        self._open()
+        query = 'SELECT count(*) from %s' % self._table_name
+        result = self._execute(False, query)
+        if result is not None:
+            result_one = result.fetchone()
+            if result_one is not None:
+                count = result_one[0]
+                if count >= self._max_item_count:
+                    clear = True
+        self._close()
+        if clear:
+            self._clear()
