@@ -27,6 +27,7 @@
 [fix] alternative player, do not append headers
 [fix] My Subscriptions (Filtered) channel matching
 [fix] Audio only, failover to video if no audio only streams available
+[fix/upd] function cache, update max rows and resolve hang on some requests
 [fix/upd] post play events happen post play
 [fix/upd] set title from metadata on play
 [chg] only automatically remove temp folder at start-up
